Fix missing features
